--- a/style/style.css
+++ b/style/style.css
@@ -78,3 +78,51 @@ nav li a{
     line-height: 30px;
     margin-bottom:30px;
 }
+
+/* main tag design */
+
+main{
+    max-width:1100px;
+    margin: 0 auto;
+}
+main section{
+    margin: 100px 0;
+}
+.about-section{
+    border-radius: 10px;
+    background: #FFF8F3;
+    padding:120px;
+}
+.semilar-title{
+    color:  #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+.about-desc{
+    color:  #757575;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    margin:30px 0;
+}
+.information{
+    display:flex;
+    justify-content: space-around;
+    gap:50px;
+    text-align: center;
+}
+.name-title{
+    color: #757575;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 30px;
+}
+.del-desc{
+    color:  #474747;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 30px; 
+}
