--- a/style/style.css
+++ b/style/style.css
@@ -126,3 +126,35 @@ main section{
     font-weight: 700;
     line-height: 30px; 
 }
+.whatdodesc{
+    color:  #757575;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    margin:30px 0;
+    padding:0 80px;
+}
+.techanology-type{
+    margin:50px 0 0 0;
+    display: flex;
+    gap:20px;
+}
+.tec-items{
+    padding:30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+.tec-title{
+    color:  #181818;
+    font-size: 20px;
+    font-weight: 700;
+    margin:20px 0;
+}
+.tec-desc{
+    color:  #757575;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+}
