--- a/style/style.css
+++ b/style/style.css
@@ -158,3 +158,83 @@ main section{
     font-weight: 400;
     line-height: 28px;
 }
+.resume-container{
+    display: flex;
+    gap:25px;
+}
+.ex-mar{
+    margin-bottom:100px;
+}
+.resume-h-title{
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
+    
+}
+.resumi-title{
+    color:  #474747;
+    font-size: 25px;
+    font-weight: 700;
+    margin:30px 0  10px 0;
+}
+.resumi-instatue{
+    color:  #757575;
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom:20px;
+}
+.resume-description{
+    color:  #757575;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px; 
+    margin-bottom:30px;
+}
+.download-button{
+    text-align:center;
+    margin-top:10px;
+}
+footer{
+    background: #FFF8F3;
+    padding:80px 150px;
+}
+.contact-from-description{
+    display: flex;
+    justify-content: space-between;
+}
+.footer-column{
+    width:50%;
+}
+label{
+    display: block;
+}
+label input[type="text"], input[type="email"],textarea{
+    padding:15px;
+    color:  #757575;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+    width:100%;
+    margin:15px 0;
+    border:none;
+}
+label input[type="text"], input[type="email"],textarea:focus{
+    border:none;
+    outline: none;
+}
+.from-title{
+    color:  #181818;
+    font-size: 35px;
+    font-weight: 700;
+    margin-bottom:20px;
+}
+.from-description{
+    color:  #474747;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+    margin-bottom:30px;
+}
+.footer-column a{
+    margin:10px 12px;
+}
