this is to much

--- a/style/style.css
+++ b/style/style.css
@@ -204,6 +204,7 @@ footer{
 .contact-from-description{
     display: flex;
     justify-content: space-between;
+    gap:20px;
 }
 .footer-column{
     width:50%;
